# naga-dx

./: .gitignore  Cargo.toml  README.md  build.rs
CreateMacroShaders/: CreateMacroShaders.cs  CreateMacroShaders.csproj  CreateMacroShaders.sln
CreateMacroShaders/CGIncludes/: UnityInstancing.cginc
shaders/: complex_input_output.hlsl  constant_buffer.hlsl  dead_simple.hlsl  input_sizes.hlsl  input_struct_with_nonsense_semantics.hlsl  multiple_struct_inputs.hlsl  simple.hlsl  struct_vs_bare_case_bare.hlsl  struct_vs_bare_case_struct.hlsl  temps.hlsl
shaders/compiled/: complex_input_output_vs_4_1.asm  complex_input_output_vs_4_1.dxbc  complex_input_output_vs_5_0.asm  complex_input_output_vs_5_0.dxbc  complex_input_output_vs_5_1.asm  complex_input_output_vs_5_1.dxbc  constant_buffer_vs_4_1.asm  constant_buffer_vs_4_1.dxbc  constant_buffer_vs_5_0.asm  constant_buffer_vs_5_0.dxbc  constant_buffer_vs_5_1.asm  constant_buffer_vs_5_1.dxbc  dead_simple_vs_4_1.asm  dead_simple_vs_4_1.dxbc  dead_simple_vs_5_0.asm  dead_simple_vs_5_0.dxbc  dead_simple_vs_5_1.asm  dead_simple_vs_5_1.dxbc  input_sizes_v.dxbc  input_sizes_vs_4_1.asm  input_sizes_vs_4_1.dxbc  input_sizes_vs_5_0.asm  input_sizes_vs_5_0.dxbc  input_sizes_vs_5_1.asm  input_struct_with_nonsense_semantics_vs_4_1.asm  input_struct_with_nonsense_semantics_vs_4_1.dxbc  input_struct_with_nonsense_semantics_vs_5_0.asm  input_struct_with_nonsense_semantics_vs_5_0.dxbc  input_struct_with_nonsense_semantics_vs_5_1.asm  (+25 more)
src/: expressions.rs  instructions.rs  io.rs  lib.rs  macros.rs  utils.rs
tests/: dxbc.rs  macros.rs
(+314 files in other folders)
