[package]
name = "naga-dx"
version = "0.1.0"
authors = ["Noel Tautges <noelatautges@gmail.com>"]
edition = "2021"

[dependencies]
dxbc = { path = "../dxbc/dxbc" }
include_dir = { version = "0.7.2", features = ["glob"] }
naga = { version = "0.8.5", features = ["hlsl-out"] }
once_cell = "1.10.0"

[dev-dependencies]
test-generator = "0.3.0"

[build-dependencies]
anyhow = "1.0.57"
find-winsdk = "0.2.0"
glob = "0.3.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
owo-colors = "3.4.0"
rayon = "1.5.2"
walkdir = "2.3.2"
